--- a/static/css/style.css
+++ b/static/css/style.css
@@ -232,7 +232,23 @@ body {
     background-color: #28a745;
 }
 
+
 .flash-message-error {
-    background-color: #dc3545;
+    position: fixed;
+    top: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 15px;
+    font-size: 24px;
+    font-weight: bold;
+    color: #fff;
+    background-color: darkred;
+    border-radius: 5px;
+    opacity: 0.9;
+    z-index: 9999;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    animation: none;
 }
 
