--- a/templates/home.html
+++ b/templates/home.html
@@ -98,7 +98,7 @@
             })
             .then(response => response.json())
             .then(data => {
-                const worked = data.worked;
+                const worked = data.suggest;
                 alert(worked);
             })
             .catch(error => {
